# salient

./: Cargo.toml  README.md  config.toml  sailent.toml  test.lua
scripts/: functions.lua  get_weather.lua  helper.lua  test.lua
src/: ai_worker.rs  config.rs  main.rs  task_execution.rs
src/ai_worker/: llm.rs  mod.rs
src/data_broker/: lang.rs  mod.rs
src/task_execution/: mod.rs
src/task_execution/scripts/: daily.lua  script.lua
