[package]
name = "salient"
version = "2024.4.1-alpha"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
rand = "0.8"
chrono = "0.4"
minijinja = { version = "2.0", features = ["json"] }

reqwest = "0.11"
encoding_rs = "0.8"

arrow = "51.0"
arrow-array = "51.0"
parquet = "51.0"
datafusion = "40.0"
datafusion-physical-plan = "40.0"
bincode = "1.3"

mlua = { version = "0.9", features = ["lua54", "vendored", "send", "serialize", "async"] }
quick-js = "0.4"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
tokio = { version = "1.37", features = ["full"] }

hf-hub = "0.3"
llama-cpp-2 = {version = "0.1", features = ["metal"] }

google-calendar = "0.7"
